Fix layout problem

--- a/examples/FluentUI.Demo.Client/wwwroot/css/site.css
+++ b/examples/FluentUI.Demo.Client/wwwroot/css/site.css
@@ -38,7 +38,7 @@
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr;
     gap: 0px 0px;
-    grid-auto-flow: row;
+    grid-auto-flow: column;
     grid-template-areas:
         "navigation content";
     grid-area: main;
